# tokyo-guide

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md
backend/: .dockerignore  .env.example  Dockerfile  inspect_html.py  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/: chat.py  search.py  sections.py
backend/app/services/: database.py  embeddings.py  groq_client.py  rag.py
backend/app/telegram/: bot.py
backend/scripts/: fetch_and_seed.py  scrape_blog.py  scrape_map.py  seed_database.py
backend/tests/: test_chat.py  test_rag.py  test_sections.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/sections/: page.tsx
frontend/src/app/sections/[category]/: page.tsx
frontend/src/components/: ChatMessage.tsx  ChatWidget.tsx  ContentCard.tsx  Footer.tsx  Header.tsx  SectionCard.tsx  SuggestedQuestions.tsx
frontend/src/lib/: api.ts
supabase/: schema.sql
